added teh second psot

--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Projects, AI, Hardware and How Computers Work">
 <meta name="author" content="">
 <link rel="canonical" href="https://massilait.github.io/blog/404.html">
-<link crossorigin="anonymous" href="/blog/assets/css/stylesheet.1c1fc868b298472bbb88c2d591d2df02b3a478af4db1ea001464b1779b27a07b.css" integrity="sha256-HB/IaLKYRyu7iMLVkdLfArOkeK9NseoAFGSxd5snoHs=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/blog/assets/css/stylesheet.css" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://massilait.github.io/blog/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://massilait.github.io/blog/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://massilait.github.io/blog/favicon-32x32.png">
